--- a/renderer/player/index.html
+++ b/renderer/player/index.html
@@ -23,6 +23,7 @@
       </div>
     </main>
 
+    <script src="../assets/js/utils.js"></script>
     <script src="../assets/js/player.js"></script>
     <script src="./_index.js"></script>
   </body>
