--- a/renderer/settings/index.html
+++ b/renderer/settings/index.html
@@ -7,7 +7,7 @@
     <title>Youtube Player for Desktop | Settings</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="../assets/css/normalize.css">
-    <link rel="stylesheet" href="../assets/css/bulma.css">
+    <link rel="stylesheet" href="../assets/css/settings.css">
   </head>
   <body>
     <main>
